playbin3: about-to-finish signal missing after short network streams
The issue can be reproduced with gst-play-1.0
, playing some short files from a DLNA server:
gst-play-1.0 --use-playbin3 --gapless http://my.dlna.server/20_seconds.flac http://my.dlna.server/5_seconds.flac http://my.dlna.server/20_seconds.flac
.
The files 20_seconds.flac and 5_seconds.flac are 20 and 5 seconds long, respectively.
- Playing the files directly with
gst-play-1.0
in the order suggested above printsAbout to finish, preparing next title
twice as expected. - Playing the files from a DLNA server, however, prints
About to finish, preparing next title
only once near the end of the first stream. The expected message near the end of the second stream is missing. - The short stream must be preceeded by a long stream to trigger the bug. When starting playback with the short stream, the
about-to-finish
signal is sent, but immediately at the beginning instead of near the end of the short stream.
Tested with version b2bfb066 on main branch, 100% reproducible.